# agenda

./: README.md  db.sqlite3  pyproject.toml
agenda/: settings.py  urls.py
contatos/: admin.py  models.py  views.py
contatos/migrations/: 0001_initial.py
contatos/templates/contatos/: index.html
templates/static/: base.html
