[tool.poetry]
name = "agenda"
version = "0.1.0"
description = "Projeto de Agenda do curso no Udemy"
authors = ["Sander Toledo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
